rhai/codegen/ui_tests/export_mod_cfg.stderr
error: expected attribute arguments in parentheses: #[rhai_fn(...)]
  --> ui_tests/export_mod_cfg.rs:12:1
   |
12 | #[rhai_fn]
   | ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> ui_tests/export_mod_cfg.rs:23:8
   |
23 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of undeclared crate or module `test_mod`
